struct_ownership/struct_onwership.log
   Compiling struct_ownership v0.1.0 (/home/haha/Rust/struct_ownership)
error[E0106]: missing lifetime specifier
 --> src/main.rs:3:15
  |
3 |     username: &str,//Use &str without lifetime: ERROR
  |               ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
1 ~ struct User<'a> {
2 |     active: bool,
3 ~     username: &'a str,//Use &str without lifetime: ERROR
  |

error[E0106]: missing lifetime specifier
 --> src/main.rs:4:12
  |
4 |     email: &str,
  |            ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
1 ~ struct User<'a> {
2 |     active: bool,
3 |     username: &str,//Use &str without lifetime: ERROR
4 ~     email: &'a str,
  |

For more information about this error, try `rustc --explain E0106`.
error: could not compile `struct_ownership` (bin "struct_ownership") due to 2 previous errors
